fix example notebook

--- a/src/Api/example.ipynb
+++ b/src/Api/example.ipynb
@@ -60,7 +60,11 @@
     "SingleFastaMinimal = \"\"\">ExampleName\n",
     "MAQYHQQHEMKQTMAETQYVTAPPPMGYPVMMKDSPQTVQPPHEGQSKGSGGFLRGCLAAMCCCCVLDCVF\"\"\"\n",
     "\n",
-    "fasta_record_1 = FastaRecord(header=\"ExampleName\", sequence=\"MAQYHQQHEMKQTMAETQYVTAPPPMGYPVMMKDSPQTVQPPHEGQSKGSGGFLRGCLAAMCCCCVLDCVF\")\n",
+    "sequence = \"MAQYHQQHEMKQTMAETQYVTAPPPMGYPVMMKDSPQTVQPPHEGQSKGSGGFLRGCLAAMCCCCVLDCVF\"\n",
+    "\n",
+    "seq_transform = \" \".join(sequence)\n",
+    "\n",
+    "fasta_record_1 = FastaRecord(header=\"ExampleName\", sequence=seq_transform)\n",
     "\n",
     "predictor_info = PredictorInfo(\n",
     "    growth_temp=37,\n",
